--- a/three-pass_protocols.tex
+++ b/three-pass_protocols.tex
@@ -6,7 +6,7 @@
 Предварительно:
 
 \begin{itemize}
-	\item Стороны $A$ и $B$ соединены незащищённым каналом связи
+	\item Стороны $A$ и $B$ соединены незащищённым каналом связи.
 	\item Каждая из сторон имеет пару из открытого и закрытого ключей $K_A$, $k_A$, $K_B$, $k_B$ соответственно.
 	\item Сторонами выбрана и используется коммутативная функция шифрования:
 	\begin{align*}
