--- a/rsa.tex
+++ b/rsa.tex
@@ -203,7 +203,7 @@
 
 Возводя $m$ в степень $e$ отдельно по $\Mod p$ и $\Mod q$ и применяя китайскую теорему об остатках\index{теорема!китайская об остатках} (\langen{Chinese remainder theorem, CRT}), можно быстрее выполнить шифрование.
 
-Однако ускорение шифрования в криптосистеме RSA через CRT может привести к уязвимостям в некоторых применениях, например в смарт-картах.
+Однако ускорение шифрования в криптосистеме RSA через CRT может породить уязвимости в отдельных реализациях, например в реализациях для смарт-карт.
 
 \example
 Пусть $c = m^e \mod n$ передаётся на расшифрование на смарт-карту, где вычисляется
