--- a/stack_overflow.tex
+++ b/stack_overflow.tex
@@ -165,6 +165,6 @@ int main() {
 
 Почти любую возможность для переполнения буфера в стеке или динамической памяти можно использовать для получения критической ошибки в программе из-за обращения к адресам виртуальной памяти, страницы которых не были выделены процессу. Следовательно, можно проводить атаки отказа в обслуживании (\langen{Denial of Service (DoS) attacks}).
 
-Переполнение буфера в динамической памяти, в случае хранения в ней адресов для вызова функций, может привести к подмене адресов и исполнению другого кода.
+Переполнение буфера в динамической памяти, в случае хранения в ней адресов для вызова функций, может привести к их подмене и исполнению другого кода.
 
 В описанных DoS-атаках NX-бит не защищает систему.
