--- a/GOST_R_34.11-94.tex
+++ b/GOST_R_34.11-94.tex
@@ -3,13 +3,13 @@
 
 Представим описание устаревшего российского стандарта хэш-функции ГОСТ Р 34.11-94~\cite{GOST-94}.
 
-Пусть $X$ -- последовательность длины 256 бит. Запишем $X$ тремя способами в виде конкатенации блоков:
+Пусть $X$ -- последовательность длины 256 бит. Запишем $X$ тремя способами в виде конкатенации четырех, шестнадцати и тридцати двух блоков:
 \[ \begin{array}{ll}
     X & = X_4 ~\|~ X_3 ~\|~ X_2 ~\|~ X_1 = \\
     & = ~ \eta_{16} ~\|~ \eta_{15} ~\|~ \dots ~\|~ \eta_2 ~\|~ \eta_1 = \\
     & = ~ \xi_{32} ~\|~ \xi_{31} ~\|~ \dots ~\|~ \xi_2 ~\|~ \xi_1
 \end{array} \]
-с длинами 64, 16 и 8 бит соответственно.
+с длинами 64, 16 и 8 битов соответственно.
 
 Введём три функции:
 \[ \begin{array}{ll}
