Fixed own mistake.

--- a/GOST_R_34.11-94.tex
+++ b/GOST_R_34.11-94.tex
@@ -9,7 +9,7 @@
     & = ~ \eta_{16} ~\|~ \eta_{15} ~\|~ \dots ~\|~ \eta_2 ~\|~ \eta_1 = \\
     & = ~ \xi_{32} ~\|~ \xi_{31} ~\|~ \dots ~\|~ \xi_2 ~\|~ \xi_1
 \end{array} \]
-с длинами 64, 16 и 8 битов соответственно.
+с длинами 64 бита, 16 битов и 8 битов соответственно.
 
 Введём три функции:
 \[ \begin{array}{ll}
