--- a/public-key.tex
+++ b/public-key.tex
@@ -18,7 +18,7 @@
 Примером подобной функции является возведение в степень по модулю составного числа $n$:
 	\[ c = f \left( m \right) = m ^ e \mod n.\]
 
-Для того, чтобы быстро вычислить обратную функцию
+Для того чтобы быстро вычислить обратную функцию
 	\[ m = f^{-1} \left( c \right) = \sqrt[e]{c} \mod n, \]
 её можно представить в виде
 	\[ m = c^{d} \mod n,\]
