--- a/key_distribution_protocols.tex
+++ b/key_distribution_protocols.tex
@@ -41,7 +41,7 @@
             \[ A \rightarrow B: ~ E_{K_{AB}}(r_A, A). \]
     \item Сторона $B$ вырабатывает сеансовый ключ $K$, создаёт шифрованное сообщение и посылает его $A$:
             \[ A \leftarrow B: ~ E_{K_{AB}}(K, r_A, A). \]
-    \item Сторона $A$ расшифровывает полученное сообщение:
+    \item Сторона $A$ расшифровывает полученное сообщение
             \[ D_{K_{AB}}( E_{K_{AB}}( K, r_A, A)) = (K, r_A, A). \]
         В результате $A$ получает сеансовый ключ и подтверждение своих реквизитов, что является дополнительной аутентификацией.
 \end{enumerate}
@@ -58,7 +58,7 @@
             \[ D_{K_{AB}}(E_{K_{AB}}(K_B, r_B, r_A, A)) = (K_B, r_B, r_A, A) \]
         и получает ключ $K_B$ и реквизиты $r_B, r_A, A$. Для аутентификации себя сторона $A$ создаёт свой ключ $K_A$ и отправляет стороне $B$ шифрованное сообщение:
             \[ A \rightarrow B: ~ E_{K_{AB}}(K_A, r_B, r_A, B). \]
-     \item Сторона $B$ осуществляет расшифрование:
+     \item Сторона $B$ осуществляет расшифрование
             \[ D_{K_{AB}}(E_{K_{AB}}(K_A, r_B, r_A, B)) = (K_A, r_B, r_A, B), \]
         которое определяет ключ $K_A$ и аутентифицирует $A$.
 \end{enumerate}
