--- a/GOST_R_34.12-2015.tex
+++ b/GOST_R_34.12-2015.tex
@@ -34,7 +34,7 @@
   \label{fig:kuznechik-p}
 \end{figure}
 
-Алгоритм развёртывания ключа основан на ячейке Фейстеля, хотя и не использует её ключевую особенность (обратимость). Начало алгоритма изображено на рис.~\ref{fig:kuznechik-keys}.
+Алгоритм развёртывания ключа основан на ячейке Фейстеля, хотя и не использует её ключевую особенность -- обратимость. Начало алгоритма изображено на рис.~\ref{fig:kuznechik-keys}.
 
 \begin{figure}[htb]
 	\centering
