Fixed spelling mistake.

--- a/three-pass_protocols.tex
+++ b/three-pass_protocols.tex
@@ -57,7 +57,7 @@
 
 Теперь приведём протокол надёжной передачи секретного ключа, основанный на экспоненциальной (коммутативной) функции шифрования. Стойкость этого протокола связана с трудностью задачи вычисления дискретного логарифма: известны значения $y, g, p$, найти $x$ в уравнении $y = g^x \mod p$.
 
-\subsection{Безключевой протокол Шамира}\index{протокол!Шамира бесключевой|(}
+\subsection{Бесключевой протокол Шамира}\index{протокол!Шамира бесключевой|(}
 
 Стороны предварительно договариваются о большом простом числе $p \sim 2^{1024}$.
 
