Fixed wrong First Name shortening.

--- a/mti.tex
+++ b/mti.tex
@@ -1,7 +1,7 @@
 \subsection{Взаимная аутентификация шифрованием}
 \selectlanguage{russian}
 
-К протоколам взаимной аутентификации принадлежит семейство протоколов, разработанных Т.~Мацумото (\langen{Tsutomu Matsumoto}), И.~Такашима (\langen{Youichi Takashima}) и Х.~Имаи (\langen{Hideki Imai}) и названных по первым буквам фамилий авторов -- \emph{протоколы MTI}\index{протоколы!MTI}.
+К протоколам взаимной аутентификации принадлежит семейство протоколов, разработанных Ц.~Мацумото (\langen{Tsutomu Matsumoto}), И.~Такашима (\langen{Youichi Takashima}) и Х.~Имаи (\langen{Hideki Imai}) и названных по первым буквам фамилий авторов -- \emph{протоколы MTI}\index{протоколы!MTI}.
 
 Здесь к открытым данным относятся:
     \[ p, ~~ g, ~~ \PK_A = g^a \mod p, ~~ \PK_B = g^b \mod p. \]
