Fixed wrong word ending.

--- a/mti.tex
+++ b/mti.tex
@@ -21,7 +21,7 @@
         \[ K_A = (g^b)^x \cdot (g^y)^a = g^{bx+ay} \mod p. \]
     \item Сторона $B$, используя открытые данные и полученное сообщение, создаёт сеансовый ключ:
         \[ K_B = (g^x)^b \cdot (g^a)^y = g^{bx+ay} \mod p. \]
-        Сеансовые ключи обоих сторон совпадают:
+        Сеансовые ключи обеих сторон совпадают:
         \[ K_{A} =K_{B} = K. \]
 \end{enumerate}
 
