--- a/sts.tex
+++ b/sts.tex
@@ -14,9 +14,9 @@
 
 Протокол состоит из трёх раундов обмена информацией между сторонами $A$ и $B$.
 \begin{enumerate}
-    \item Сторона $A$ создаёт секретное случайное число $2 \leq x \leq p-1$ и отправляет $B$:
+    \item Сторона $A$ создаёт секретное случайное число $x: 2 \leq x \leq p-1$ и отправляет $B$:
             \[ A \rightarrow B: ~ g^x \mod p. \]
-    \item Сторона $B$ создаёт секретное случайное число $2 \leq y \leq p-1$, вычисляет общий секретный ключ
+    \item Сторона $B$ создаёт секретное случайное число $y: 2 \leq y \leq p-1$, вычисляет общий секретный ключ
             \[ K = (g^x)^y = g^{xy} \mod p, \]
         с помощью которого создаёт шифрованное сообщение $E_K(S_B(g^x, g^y))$ для аутентификации, и отправляет $A$:
             \[ A \leftarrow B: ~ \left( g^y \mod p, ~~ E_K( S_B( g^x, g^y)) \right). \]
