--- a/girault_scheme.tex
+++ b/girault_scheme.tex
@@ -3,13 +3,15 @@
 
 В \emph{протоколе Жиро}\index{протокол!Жиро} (\langfr{Marc Girault},~\cite{Girault:1990, Girault:1991}) участвуют три стороны -- $A$, $B$ и надёжный центр $T$.
 \begin{enumerate}
-    \item У стороны $T$ есть открытый и закрытый ключи криптосистемы RSA\index{криптосистема!RSA},
-        \[ n=pq, ~ e, ~ d=e^{-1} \mod \varphi(n), \]
-        с дополнительным параметром $g$ -- генератором подгруппы максимально возможного порядка мультипликативной группы $\Z_n^*$:
+    \item У стороны $T$ есть открытый и закрытый ключи криптосистемы RSA\index{криптосистема!RSA}:
         \[ \begin{array}{l}
             \PK_T = (n, e, g) ~~\text{открытый ключ}, \\
             \SK_T = (d) ~~ \text{закрытый ключ}. \\
         \end{array} \]
+Ключи составляются из параметров
+        \[ n=pq, & ~ e, & ~ d=e^{-1} \mod \varphi(n) \]
+        и $g$ -- генератора подгруппы максимально возможного порядка мультипликативной группы $\Z_n^*$.
+
     \item Стороны $A$ и $B$ независимо друг от друга создают свои открытые и закрытые ключи, обмениваясь информацией с центром $T$ по надёжному защищённому каналу. Стороны $A$ и $B$ выбирают свои закрытые ключи:
         \[ \begin{array}{l}
             \SK_A = a, \\
