--- a/quantum_protocols.tex
+++ b/quantum_protocols.tex
@@ -12,7 +12,7 @@
 	\item классический канал связи;
 \end{itemize}
 
-Протокол гарантирует, что вмешательство злоумышленника в протокол можно заметить вплоть до тех пор, пока злоумышленник не сможет контролировать и на чтение, и на запись все каналы общения сразу.
+Протокол гарантирует, что вмешательство злоумышленника в протокол можно заметить вплоть до тех пор, пока злоумышленник не сможет контролировать и чтение, и запись на всех каналах общения сразу.
 
 Протокол состоит из следующих этапов:
 
