Word ending fix.

--- a/quantum_protocols.tex
+++ b/quantum_protocols.tex
@@ -5,7 +5,7 @@
 
 В 1984 году Чарлз Беннет (\langen{Charles Henry Bennett}) и Жиль Брассар (\langfr{Gilles Brassard}) предложили новый квантовый протокол распределения ключа~\cite{Bennett:Brassard:1984}. Как и другие протоколы его целью является создание нового сеансового ключа, который в дальнейшем можно использовать в классической симметричной криптографии. Однако особенностью протокола является использование отдельных положений квантовой физики для гарантии защиты получаемого ключа от перехвата злоумышленником.
 
-До начала очередного раунда генерации сеансового ключа предполагается, что у Алисы и Боба, как участников протокола, имеется:
+До начала очередного раунда генерации сеансового ключа предполагается, что у Алисы и Боба, как участников протокола, имеются:
 
 \begin{itemize}
 	\item квантовый канал связи (например, оптоволокно);
