Added missing symbols.

--- a/quantum_protocols.tex
+++ b/quantum_protocols.tex
@@ -28,8 +28,8 @@
 В первой части протокола с точки зрения физика-экспериментатора Алиса берёт единичный фотон и поляризует под одним из четырёх углов: 0, 45, 90 или 135. Будем говорить, что Алиса сначала выбрала базис поляризации (<<+>> или <<?>>), а затем выбрала в этом базисе одно из двух направлений поляризации:
 
 \begin{itemize}
-	\item $0^{\circ}$ (<<$\rightarrow$>>) или $90^{\circ}$ (<<$\uparrow$) в первом базисе (<<+>>);
-	\item $45^{\circ}$ (<<$\nearrow$>>) или $135^{\circ}$ (<<$\nwarrow$) во втором базисе (<<×>>).
+	\item $0^{\circ}$ (<<$\rightarrow$>>) или $90^{\circ}$ (<<$\uparrow$>>) в первом базисе (<<+>>);
+	\item $45^{\circ}$ (<<$\nearrow$>>) или $135^{\circ}$ (<<$\nwarrow$>>) во втором базисе (<<×>>).
 \end{itemize}
 
 С точки зрения квантовой физики мы можем считать, что у нас есть система с двумя базовыми состояниями $|0\rangle$ и $|1\rangle$. Состояние системы в любой момент времени можно записать как $| \psi \rangle = \cos \alpha |0\rangle + \sin \beta |1\rangle$. Так как четыре выбранных Алисой возможных исходных состояния неортогональны между собой (точнее, не все попарно), то из законов квантовой физики следует два важных момента:
