--- a/kerberos.tex
+++ b/kerberos.tex
@@ -62,6 +62,6 @@
         \end{enumerate}
 \end{enumerate}
 
-Аутентификация и проверка целостности достигаются сравнением идентификаторов, одноразовых меток и меток времени внутри зашифрованных сообщений после расшифрования с их действительными значениями.
+Аутентификация и проверка целостности достигаются сравнением с действительными значениями идентификаторов, одноразовых меток и меток времени внутри зашифрованных сообщений после расшифрования.
 
 Некоторым недостатком схемы является необходимость синхронизации часов между субъектами сети.
