--- a/pgp.tex
+++ b/pgp.tex
@@ -3,7 +3,7 @@
 
 В качестве примера передачи файлов по сети с обеспечением аутентификации, конфиденциальности и целостности рассмотрим систему PGP (\langen{Pretty Good Privacy}), разработанную Филом Циммерманном (\langen{Phil Zimmermann}) в 1991 г. Изначально система предлагалась к использованию для защищённой передачи электронной почты. Стандартом PGP является OpenPGP. Примерами реализации стандарта OpenPGP являются GNU Privacy Guard (GPG) и netpgp, разработанные в рамках проектов GNU и NetBSD соответственно.
 
-Каждый пользователь обладает одним или несколькими закрытыми ключами для криптосистемы с открытым ключом, которые используются для аутентификации посредством ЭП. Пользователь хранит также открытые ключи других пользователей, которые он использует для шифрования секретного сеансового ключа блочного шифрования. Передаваемое сообщение подписывается секретным ключом отправителя, затем сообщение шифруется блочной криптосистемой на случайно выбранном сеансовом ключе. Сам сеансовый ключ шифруется криптосистемой с открытым ключом на открытом ключе получателя.
+Для аутентификаци посредством ЭП каждый пользователь обладает одним закрытым ключом или несколькими закрытыми ключами для криптосистемы с открытым ключом. Пользователь хранит также открытые ключи других пользователей, которые он использует для шифрования секретного сеансового ключа блочного шифрования. Передаваемое сообщение подписывается секретным ключом отправителя, затем сообщение шифруется блочной криптосистемой на случайно выбранном сеансовом ключе. Сам сеансовый ключ шифруется криптосистемой с открытым ключом на открытом ключе получателя.
 
 Свои закрытые ключи отправитель хранит в зашифрованном виде. Набор ключей называется связкой закрытых ключей. Шифрование закрытых ключей в связке производится симметричным шифром\index{шифр!симметричный}, ключом которого является функция от пароля, вводимого пользователем. Шифрование закрытых ключей, хранимых на компьютере, является стандартной практикой для защиты от утечки, например, в случае взлома ОС, утери ПК и~т.\,д.
 
