Fixed minor grammar error.

--- a/tls.tex
+++ b/tls.tex
@@ -26,7 +26,7 @@
 
     \item $C \leftarrow S$:
         \begin{enumerate}
-            \item ServerHello: одноразовая метка $N_S$, поддерживаемые алгоритмы сервера.
+            \item ServerHello: одноразовая метка $N_S$, поддерживаемые сервером алгоритмы.
 
             После обмена набором желательных алгоритмов сервер и клиент по единому правилу выбирают общий набор алгоритмов.
             \item Server Certificate: сертификат X.509v3 сервера с запрошенным URI (URI нужен в случае нескольких виртуальных веб-серверов с разными URI на одном узле c одним IP-адресом).
