Revert "Improved language accuracy, fixed word ending."
This reverts commit 06c73da57de5df40748249f3f5beaa1fc2046350.

Improved language accuracy.

--- a/lucifer.tex
+++ b/lucifer.tex
@@ -30,7 +30,7 @@
 \begin{figure}[htb]
 	\centering
 	\includegraphics[width=0.8\textwidth]{pic/lucifer}
-  \caption{Общий вид (упрощённая схема) функции шифрования в одном из вариантов проекта <<Люцифер>>. Входной блок (в проекте <<Люцифер>> -- 128 бит) подавался на вход на несколько слоёв (в проекте -- 16) из p-блоков и пар s-блоков. S-блок в каждой паре выбирался в зависимости от значения соответствующего бита ключа}
+  \caption{Общий вид (упрощённая схема) функции шифрования в одном из вариантов проекта <<Люцифер>>. Входной блок (в проекте <<Люцифер>> его объем -- 128 бит) подавался на вход на несколько слоёв (в <<Люцифере>> -- 16) из p-блоков и пар s-блоков. S-блок в каждой паре выбирался в зависимости от значения соответствующего бита ключа}
   \label{fig:lucifer}
 \end{figure}\index{SP-сеть|)}
 
