Punctuation fix, accuracy improvement.

--- a/key_distribution_protocols.tex
+++ b/key_distribution_protocols.tex
@@ -54,13 +54,13 @@
     \item Сторона $B$ вырабатывает случайное число $r_B$ и отправляет стороне $A$ зашифрованное сообщение:
             \[ A \leftarrow B: ~ E_{K_{AB}}(K_B, r_B, r_A, A), \]
         где $K_B$ -- ключ $B$.
-     \item Сторона $A$ осуществляет расшифрование:
-            \[ D_{K_{AB}}(E_{K_{AB}}(K_B, r_B, r_A, A)) = (K_B, r_B, r_A, A), \]
+     \item Сторона $A$ осуществляет расшифрование
+            \[ D_{K_{AB}}(E_{K_{AB}}(K_B, r_B, r_A, A)) = (K_B, r_B, r_A, A) \]
         и получает ключ $K_B$ и реквизиты $r_B, r_A, A$. Для аутентификации себя сторона $A$ создаёт свой ключ $K_A$ и отправляет стороне $B$ шифрованное сообщение:
             \[ A \rightarrow B: ~ E_{K_{AB}}(K_A, r_B, r_A, B). \]
-     \item Сторона $B$ осуществляет расшифрование:
+     \item Сторона $B$ осуществляет расшифрование
             \[ D_{K_{AB}}(E_{K_{AB}}(K_A, r_B, r_A, B)) = (K_A, r_B, r_A, B), \]
-        которое определяет ключ $K_A$ и аутентифицирует $A$.
+       в результате которого вычисляет ключ $K_A$ и аутентифицирует $A$.
 \end{enumerate}
 
 Таким образом, обе стороны имеют в своём распоряжении ключи $K_A, K_B$ в качестве сеансовых секретных ключей.
