Added commas and dot.

--- a/http_auth.tex
+++ b/http_auth.tex
@@ -13,9 +13,9 @@
 
 Более защищённым, но мало используемым способом аутентификации является вычисление хэша от пароля $m$, <<соли>> $s$ и псевдослучайных одноразовых меток $n_1, n_2$ с помощью JavaScript в браузере и отсылка по сети только результата вычисления хэша.
 \[ \begin{array}{ll}
-    \text{Браузер} ~\rightarrow~ \text{Сервис:} & \text{HTTP GET-запрос} \\
-    \text{Браузер} ~\leftarrow~ \text{Сервис:}  & s ~\|~ n_1 \\
-    \text{Браузер} ~\rightarrow~ \text{Сервис:} & n_2 ~\|~ h( h(s ~\|~ m) ~\|~ n_1 ~\|~ n_2) \\
+    \text{Браузер} ~\rightarrow~ \text{Сервис:} & \text{HTTP GET-запрос,} \\
+    \text{Браузер} ~\leftarrow~ \text{Сервис:}  & s ~\|~ n_1, \\
+    \text{Браузер} ~\rightarrow~ \text{Сервис:} & n_2 ~\|~ h( h(s ~\|~ m) ~\|~ n_1 ~\|~ n_2). \\
 \end{array} \]
 
 Если веб-приложение хранит хэш от пароля и <<соли>> $h(s ~\|~ m)$, то пароль не может быть перехвачен ни по сети, ни веб-приложением.
