Deleted extra colon.

--- a/os_access_controls.tex
+++ b/os_access_controls.tex
@@ -22,7 +22,7 @@
     \item системный (System Integrity, \texttt{0x4000}).
 \end{itemize}
 
-Дополнительно объекты имеют три атрибута, которые, если они установлены, запрещают доступ субъектов с более низким уровнем доступа к ним: cубъекты с более низким уровнем доступа не могут:
+Дополнительно объекты имеют три атрибута, которые, если они установлены, запрещают доступ субъектов с более низким уровнем доступа к ним: cубъекты с более низким уровнем доступа не могут
 \begin{itemize}
     \item читать (\langen{no read-up}),
     \item изменять (\langen{no write-up}),
