--- a/stack_overflow.tex
+++ b/stack_overflow.tex
@@ -150,9 +150,9 @@ int main() {
 \begin{enumerate}
 	\item Современные 64-разрядные x86-64 процессоры включают поддержку флагов доступа к страницам памяти. В таблице виртуальной памяти, выделенной процессу, каждая страница имеет набор флагов, отвечающих за защиту страниц от некорректных действий программы:
 		\begin{itemize}
-		\item флаг разрешения доступа из пользовательского режима -- если флаг не установлен, то доступ к данной области памяти возможен только из режима ядра;
-		\item флаг запрета записи -- если флаг установлен, то попытка выполнить запись в данную область памяти приведёт к возникновению исключения;
-		\item флаг запрета исполнения\index{бит запрета исполнения} (NX-Bit, No eXecute Bit в терминологии AMD; XD-Bit, Execute Disable Bit в терминологии Intel; DEP, Data Execution Prevention -- соответствующая опция защиты в операционных системах) -- если флаг установлен, то при попытке передачи управления на данную область памяти возникнет исключение. Для совместимости со старым программным обеспечением есть возможность отключить использование данного флага на уровне операционной системы целиком или для отдельных программ.
+		\item Флаг разрешения доступа из пользовательского режима. Если флаг не установлен, то доступ к данной области памяти возможен только из режима ядра.
+		\item Флаг запрета записи. Если флаг установлен, то попытка выполнить запись в данную область памяти приведёт к возникновению исключения.
+		\item Флаг запрета исполнения\index{бит запрета исполнения} (NX-Bit, No eXecute Bit в терминологии AMD; XD-Bit, Execute Disable Bit в терминологии Intel; DEP, Data Execution Prevention -- соответствующая опция защиты в операционных системах). Если флаг установлен, то при попытке передачи управления на данную область памяти возникнет исключение. Для совместимости со старым программным обеспечением есть возможность отключить использование данного флага на уровне операционной системы целиком или для отдельных программ.
 	\end{itemize}
 	Попытка выполнить операции, которые запрещены соответствующими настройками виртуальной памяти, вызывает ошибку сегментации (\langen{segmentation fault, segfault}).
 
