--- a/groups.tex
+++ b/groups.tex
@@ -143,7 +143,7 @@
 
 \subsection{Группа $\Z_n^*$}
 
-\emph{Функция Эйлера}\index{функция!Эйлера} $\varphi(n)$ определяется как количество чисел, взаимно простых с $n$ в интервале от 1 до $n-1$.
+\emph{Функция Эйлера}\index{функция!Эйлера} $\varphi(n)$ определяется как количество натуральных чисел, взаимно простых с $n$ на отрезке от 1 до $n-1$.
 
 Если $n=p$ -- простое\index{число!простое} число, то
     \[ \varphi(p) = p - 1, \]
