--- a/euclidean_algorithm.tex
+++ b/euclidean_algorithm.tex
@@ -3,7 +3,7 @@
 
 Рекурсивная форма алгоритма Евклида вычисления $\gcd(a,b)$ имеет следующий вид:
     \[\set(a,b): a>b;  \gcd(a,b) = \gcd(b, a \mod b). \]
-Редуцирование чисел продолжается, пока не получим
+Исполнитель алгоримта продолжает редуцирование чисел, пока не получает
     \[ a \mod b = 0, \]
 тогда $b$ и будет искомым НОД.
 
