--- a/pseudo-primes_generation.tex
+++ b/pseudo-primes_generation.tex
@@ -45,8 +45,8 @@
 окажется простым, повышается в
     \[ \frac{1}{P(10^4)} \approx 10 \]
 раз. В среднем, каждое
-    \[ \frac{\ln n}{2} \cdot P(L) \approx \frac{710}{2} \frac{1}{10} \approx 36 \]
-нечётное число может быть простым вместо каждого $\frac{\ln n}{2} \approx 355$ числа, если нечётные числа выбирать без ограничений (без просеивания).
+    \[ \frac{\ln n}{2} \cdot P(L) \approx \frac{710}{2} \frac{1}{10} \approx 36-е \]
+нечётное число может быть простым вместо каждого $\frac{\ln n}{2} \approx 355-го$ числа, если нечётные числа выбирать без ограничений (без просеивания).
 
 В этом случае средняя сложность генерирования $k$-битового псевдопростого числа имеет порядок:
     \[ O \left( \frac{\ln n}{2} \cdot \frac{1}{P(L)} \cdot \left( t k^3 \right) \right) = O(t k^4). \]
