Added missing dash.

--- a/coincide-index_method.tex
+++ b/coincide-index_method.tex
@@ -8,7 +8,7 @@
 
 Найдём индекс совпадений для различных предположений относительно распределений букв последовательности. Сначала рассмотрим случай, когда вероятности всех букв одинаковы. Пусть
     \[ \mathbf{X} = \left[ X_1, X_2, \dots, X_L \right] \]
-случайный текст с распределением
+-- случайный текст с распределением
     \[ \mathcal{P}_1 = \left\{ p_{11}, p_{12}, \dots, p_{1A} \right\}. \]
 Найдём индекс совпадений
     \[ I_c(\mathcal{P}_1), \]
