--- a/tasks.tex
+++ b/tasks.tex
@@ -7,7 +7,7 @@
 \section{Математические основы}
 \tasksection
 
-\tasknumber Найдите общее количество и перечислите генераторы аддитивной циклической группы $\mathbb{Z}_{33}$ с операцией в виде сложения чисел по модулю 33.
+\tasknumber Найдите общее количество генераторов аддитивной циклической группы $\mathbb{Z}_{33}$ с операцией в виде сложения чисел по модулю 33 и перечислите их.
 \medbreak
 \textbf{Ответ:} 20: [1, 2, 4, 5, 7, 8, 10, 13, 14, 16, 17, 19, 20, 23, 25, 26, 28, 29, 31, 32].
 \bigbreak
