Improved accuracy in terminology usage.

--- a/tasks.tex
+++ b/tasks.tex
@@ -27,7 +27,7 @@
 \textbf{Ответ:} <<27>>; <<28>>; <<7>>.
 \bigbreak
 
-\tasknumber Вычислить в поле Галуа $GF\left( 27 \right)$, $m\left( x \right) = x^{3} + x^{2} + x + 2$, следующее значение: $26 \times 11 + 25^2$. Многочлены заданы как десятичное представление троичных коэффициентов, свободный член многочлена соответствует младшему биту троичного представления. В ответе привести в десятичном представлении результаты умножения, возведения в степень и сложения.
+\tasknumber Вычислить в поле Галуа $GF\left( 27 \right)$, $m\left( x \right) = x^{3} + x^{2} + x + 2$, следующее значение: $26 \times 11 + 25^2$. Многочлены заданы как десятичное представление троичных коэффициентов, свободный член многочлена соответствует младшему разряду троичного представления. В ответе привести в десятичном представлении результаты умножения, возведения в степень и сложения.
 \medbreak
 \textbf{Решение:}
 \begin{itemize}\itemsep1pt \parskip0pt \parsep0pt
