--- a/DES.tex
+++ b/DES.tex
@@ -13,6 +13,6 @@
 
 Эти 32 бита проходят через функцию расширения, которая с помощью дублирования отдельных битов превращает их в 48 битов. Они суммируются побитово по модулю 2 с раундовым ключом. Результат подаётся на вход 8-ми s-блоков, которые работают как таблицы замен последовательности из 6 битов в 4 бита (каждый блок). На выходе s-блоков получается $8 \times 4 = 32$ бита, которые попадают в p-блок перестановки. Результат работы p-блока является результатом функции Фейстеля\index{функция!Фейстеля} для одного раунда шифра DES.
 
-Интересно отметить, что изначально автором предполагалось использовать ключ в 128 битов, но под напором АНБ (Агентство национальной безопасности, \langen{National Security Agency, NSA}) он был сокращён до 56 битов, что на тот момент составляло вполне достаточную для криптостойкости величину. Кроме того, АНБ указало обязательные к использованию s-блоки (таблицы замен). Много позже, в 90-х годах, когда были разработаны методы линейного и дифференциального криптоанализа, выяснилось, что предложенные АНБ в 70-х годах s-блоки устойчивы к данным методам криптоанализа, как будто специально делались с учётом возможности их использования.
+Интересно отметить, что изначально автором предполагалось использовать ключ в 128 битов, но под напором АНБ (Агентство национальной безопасности, \langen{National Security Agency, NSA}) он был сокращён до 56 битов, что на тот момент составляло вполне достаточную для криптостойкости величину. Кроме того, АНБ указало обязательные к использованию s-блоки (таблицы замен). Много позже, в 90-х годах, когда были разработаны методы линейного и дифференциального криптоанализа, выяснилось, что предложенные АНБ в 70-х годах s-блоки устойчивы к данным методам криптоанализа, в результате чего возникло предположение о том, что они специально делались с учётом возможности их использования.
 
 \index{шифр!DES|)}
