--- a/el-gamal.tex
+++ b/el-gamal.tex
@@ -10,7 +10,7 @@
 
 Хотя элементы $x$ и $y$ группы $\Z_p^*$ задают друг друга однозначно, найти $y$, зная $x$, просто, а вот эффективный алгоритм для получения $x$ по заданному $y$ неизвестен. Говорят, что задача вычисления дискретного логарифма
 	\[ x = \log_g y \mod p \]
-является вычислительно сложной задачей. На сложности вычисления дискретного логарифма для больших простых $p$ основывается криптосистема Эль-Гамаля.
+является вычислительно сложной. На сложности вычисления дискретного логарифма для больших простых $p$ основывается криптосистема Эль-Гамаля.
 
 \subsection{Шифрование}\index{шифр!Эль-Гамаля|(}
 
