--- a/generators.tex
+++ b/generators.tex
@@ -37,7 +37,7 @@
 
 \section{КСГПСЧ на основе РСЛОС}
 
-Как уже упоминалось ранее, использование РСЛОС в качестве ГПСЧ не является криптографически стойким. Однако можно использовать комбинацию из нескольких регистров сдвига, чтобы в результате получить быстрый, простой (дешёвый) и надёжный (криптографически стойкий) генератор псевдослучайных чисел.
+Как уже упоминалось ранее, использование РСЛОС в качестве ГПСЧ не гарантирует криптографической стойкости. Однако можно использовать комбинацию из нескольких регистров сдвига, чтобы в результате получить быстрый, простой (дешёвый) и надёжный (криптографически стойкий) генератор псевдослучайных чисел.
 
 \input{generators_with_multiple_shift_registers}
 
