--- a/quantum_protocols.tex
+++ b/quantum_protocols.tex
@@ -72,7 +72,7 @@
 
 Что составляет 25\% от энтропии, передаваемой по каналу случайной величины $Y$.
 
-Если рассматривать величину $X_E$, которую Ева пытается восстановить из принятой её величины $Y_E$, то с точки зрения теории информации ситуация ещё хуже:
+Если рассматривать величину $X_E$, которую Ева пытается восстановить из принятой её величины $Y_E$, то, с точки зрения теории информации, ситуация ещё хуже:
 
 \begin{itemize}
 	\item при угаданном базисе поляризатора получаем исходную величину $X_E = X_A$;
