quantum_protocols.tex: исправлено согласование слов

--- a/quantum_protocols.tex
+++ b/quantum_protocols.tex
@@ -17,7 +17,7 @@
 Протокол состоит из следующих этапов:
 
 \begin{itemize}
-	\item передача и приём фотона по квантовому каналу связи от Алисы к Бобу;
+	\item передача Алисой и приём Бобом фотона по квантовому каналу связи;
 	\item передача Бобом информации об использованных анализаторах;
 	\item передача Алисой информации о совпадении выбранных анализаторов и исходных поляризаций.
 \end{itemize}
