quantum_protocols.tex: исправлены окончания в фразе

--- a/quantum_protocols.tex
+++ b/quantum_protocols.tex
@@ -39,7 +39,7 @@
 	\item невозможность достоверно отличить неортогональные состояния друг от друга.
 \end{itemize}
 
-С точки зрения специалиста по теории информации можем считать, что Алиса использует две независимые случайные величины $X_A$ и $A$ с энтропией по 1 бит каждый, чтобы получить новую случайную величину $Y_A = f \left( X_A; A \right)$, передаваемую в канал связи.
+С точки зрения специалиста по теории информации можем считать, что Алиса использует две независимые случайные величины $X_A$ и $A$ с энтропией по 1 биту каждая, чтобы получить новую случайную величину $Y_A = f \left( X_A; A \right)$, передаваемую в канал связи.
 
 \begin{itemize}
 	\item $H \left( A \right) = 1~\text{бит}$, выбор базиса поляризации (<<+>> или <<×>>);
