quantum_protocols.tex: исправлено окончание

--- a/quantum_protocols.tex
+++ b/quantum_protocols.tex
@@ -59,7 +59,7 @@
 С точки зрения теории информации мы можем рассмотреть фактически передаваемое состояние фотона как некоторую случайную величину $Y_A$. Ева использует случайную величину $E$ (выбор пары ортогональных направлений поляризатора – <<+>> либо <<×>>) для получения величины $Y_E$ как результата измерения $Y_A$. При этом для каждого заданного исходного состояния Ева получает на выходе:
 
 \begin{itemize}
-	\item аналогичное состояние с вероятностью 50\% (вероятность выбора пары ортогональных направлений поляризатора, совпадающих с выбранной Алисой);
+	\item аналогичное состояние с вероятностью 50\% (вероятность выбора пары ортогональных направлений поляризатора, совпадающих с выбранными Алисой);
 	\item одно из двух неортогональных оригинальному состояний с вероятностью 25\% каждое.
 \end{itemize}
 
