--- a/quantum_protocols.tex
+++ b/quantum_protocols.tex
@@ -63,7 +63,7 @@
 	\item одно из двух неортогональных оригинальному состояний с вероятностью 25\% каждое.
 \end{itemize}
 
-Таким образом условная энтропия величины $Y'$, измеренной Евой, относительно величины Y, переданной Алисой, равна:
+Таким образом условная энтропия величины $Y'$, измеренной Евой, относительно величины $Y$, переданной Алисой, равна:
 
 \[ H \left( Y_E | Y_A \right) = - \frac{1}{2} \log_2 \frac{1}{2} - \frac{1}{4} \log_2 \frac{1}{4} - \frac{1}{4} \log_2 \frac{1}{4} = 1,5~\text{бит} \]
 
