quantum_protocols.tex: исправлен символ в формуле

--- a/quantum_protocols.tex
+++ b/quantum_protocols.tex
@@ -80,7 +80,7 @@
 \end{itemize}
 
 Получается, что условная энтропия восстанавливаемой Евой последовательности $X_E$ относительно исходной $X_A$ равна:
-\[ H \left( X_E | X_A \right) = - \frac{3}{4} \log \frac{3}{4} – \frac{1}{4} \log \frac{1}{4} \approx 0,81~\text{бит.}\]
+\[ H \left( X_E | X_A \right) = - \frac{3}{4} \log \frac{3}{4} - \frac{1}{4} \log \frac{1}{4} \approx 0,81~\text{бит.}\]
 
 И взаимная информация
 \[ I \left( X_E; X_A \right) = H \left( X_E \right) - H \left( X_E | X_A \right) \approx 0,19~~\text{бит}. \]
