--- a/The_minimum_key_lengths.tex
+++ b/The_minimum_key_lengths.tex
@@ -11,7 +11,7 @@
     \item выполняется закон Мура об удвоении вычислительной производительности на единицу стоимости каждые 2 года, то есть производительность вырастет в $M = 2^{Y/2} \approx 2^{50}$ раз.
 \end{itemize}
 
-Число переборов $N$ примерно равно
+Число попыток $N$ при переборе примерно равно
     \[ N \approx R \cdot n \cdot C \cdot S \cdot M, \]
     \[ N \approx 2^{23} \cdot 2^{10} \cdot 2^{4} \cdot 2^{32} \cdot 2^{50} = 2^{23+10+4+32+50} = 2^{119}. \]
 
