Feistel_cipher.tex: исправлена ошибка в употреблении слова

--- a/Feistel_cipher.tex
+++ b/Feistel_cipher.tex
@@ -1,7 +1,7 @@
 \section{Ячейка Фейстеля}\index{ячейка Фейстеля|(}
 \selectlanguage{russian}
 
-Следующей идеей, продвинувшей развитие блочных шифров и приведшей к появлению государственного стандарта DES\index{шифр!DES}, стало появление конструкции, получившей название \emph{ячейка Фейстеля}. Данная конструкция приведена на рис.~\ref{fig:Feistel}.
+Следующей идеей, продвинувшей развитие блочных шифров и приведшей к появлению государственного стандарта DES\index{шифр!DES}, стала конструкция, получившая название \emph{ячейка Фейстеля}. Данная конструкция приведена на рис.~\ref{fig:Feistel}.
 
 \begin{figure}[!htb]
     \centering
