--- a/linear-congruential-generator.tex
+++ b/linear-congruential-generator.tex
@@ -4,7 +4,7 @@
 Алгоритм был предложен Лемером (\langen{Derrick Henry Lehmer},~\cite{Lehmer:1951:1, Lehmer:1951:2}) в 1949 году. Линейный конгруэнтный генератор основывается на вычислении последовательности $x_n, x_{n+1}, \dots$, такой что:
 	\[x_{n+1} = a \cdot x_n + c \mod m.\]
 
-Числа $a, c, m$, $ 0 < a < m, 0 < c < m$ являются параметрами алгоритма.
+Числа $a, c, m$, $ 0 < a < m, 0 < c < m$, являются параметрами алгоритма.
 
 \example
 Для параметров $a = 2, c = 3, m = 5$ и начального состояния $x_0 = 1$ получаем последовательность: $0, 3, 4, 1, 0, \dots$
