GOST_R_34.11-2012.tex: приведено в порядок перечисление

--- a/GOST_R_34.11-2012.tex
+++ b/GOST_R_34.11-2012.tex
@@ -4,10 +4,10 @@
 С 1 января 2013 года в России введён в действие новый стандарт на криптографическую хэш-функцию ГОСТ Р 34.11-2012~\cite{GOST-R:34.11-2012}. Неофициально новый алгоритм получил название <<Стрибог>>. При разработке хэш-функции авторы основывались на нескольких требованиях:
 
 \begin{itemize}
-	\item не должна быть уязвима к известным атакам;
-	\item должна использовать хорошо изученные конструкции и преобразования;
-	\item не должно быть лишних преобразований, каждое преобразование должно гарантировать выполнение определённых криптографических свойств;
-	\item при наличии нескольких вариантов реализации требуемого свойства -- наиболее простой для анализа и реализации;
+	\item отсутствие уязвимостей к известным атакам;
+	\item использование только хорошо изученных конструкций и преобразований;
+	\item отсутствие лишних преобразований (каждое преобразование должно гарантировать выполнение определённых криптографических свойств);
+	\item при наличии нескольких вариантов реализации требуемого свойства -- использование наиболее простого для анализа и реализации;
 	\item максимальная производительность \emph{программной} реализации.
 \end{itemize}
 
