key_distribution_protocols.tex: приведено к общему стилю введение обозначения

--- a/key_distribution_protocols.tex
+++ b/key_distribution_protocols.tex
@@ -23,7 +23,7 @@
 Рассмотрим другие варианты решения задачи о передаче сеансового ключа.
 Задача остаётся прежней: обе стороны $A$ и $B$ имеют общий долговременный секретный ключ $K_{AB}$, сторона $A$ должна выработать сеансовый секретный ключ $K$ и доставить его стороне $B$.
 
-Протокол включает \emph{метки времени} -- информацию о моменте $t_A$ отправки сообщения и моменте получения сообщения $t_B$.
+Протокол включает \emph{метки времени} -- информацию о моменте отправки сообщения $t_A$ и моменте получения сообщения $t_B$.
 
 \begin{enumerate}
     \item Сторона $A$ вырабатывает $K$, с помощью долговременного ключа $K_{AB}$ создаёт шифрованное сообщение с меткой времени $t_A$ и передаёт его стороне $B$:
