key_distribution_protocols.tex: убрано лишнее обозначение

--- a/key_distribution_protocols.tex
+++ b/key_distribution_protocols.tex
@@ -122,7 +122,7 @@
                 A \rightarrow B: & ~ E_{K_B}(K, t_A), \\
                 A \rightarrow B: & ~ S_A(K, t_A, B). \\
             \end{array} \]
-    \item Сторона $B$ получает это сообщение, расшифровывает $K, t_A$ и, добавив свои реквизиты $B$, может проверить подпись $S_A(K, t_A, B)$.
+    \item Сторона $B$ получает это сообщение, расшифровывает $K, t_A$ и, добавив свои реквизиты, может проверить подпись $S_A(K, t_A, B)$.
 \end{enumerate}
 
 В третьем варианте протокола сначала производится шифрование, потом подпись.
