diffie-hellman.tex: заменено слово

--- a/diffie-hellman.tex
+++ b/diffie-hellman.tex
@@ -89,4 +89,4 @@
 
 Криптоаналитик $E$ имеет возможность перехватывать и подменять все передаваемые сообщения. Если по тексту письма нельзя обнаружить участие криптоаналитика в обмене информацией, то атака <<человек посередине>>\index{атака!<<человек посередине>>} успешна.
 
-Существует несколько протоколов для преодоления атаки этого типа.
+Существует несколько протоколов для защиты от атаки этого типа.
