--- a/ipsec.tex
+++ b/ipsec.tex
@@ -85,7 +85,7 @@ IPsec определяет:
 
 \emph{Защищённая связь} (\langen{Security Association, SA}) является \emph{однонаправленной} от отправителя к получателю и характеризуется тремя основными параметрами:
 \begin{itemize}
-    \item индексом параметров защиты -- уникальное 32-битовое число, входит в заголовок ESP- и AH-пакетов;
+    \item индексом параметров защиты -- уникальным 32-битовым числом, входящим в заголовок ESP- и AH-пакетов;
     \item IP-адресом стороны-отправителя;
     \item идентификатором применения ESP- или AH-протокола.
 \end{itemize}
