tasks.tex: уточнён термин

--- a/tasks.tex
+++ b/tasks.tex
@@ -348,7 +348,7 @@
 \textbf{Ответ:} $c = 86$.
 \bigbreak
 
-\tasknumber Расшифровать сообщение по схеме RSA. Для генерации пары открытого и секретного ключа использовались числа: $p = 13$; $q = 17$. Открытая экспонента: $e = 91$. Зашифрованное сообщение: $c = 196$.
+\tasknumber Расшифровать сообщение по схеме RSA. Для генерации пары открытого и закрытого ключа использовались числа: $p = 13$; $q = 17$. Открытая экспонента: $e = 91$. Зашифрованное сообщение: $c = 196$.
 \medbreak
 \textbf{Ответ:} $d = 19$; $m = 66$.
 \bigbreak
@@ -370,17 +370,17 @@
 \section{Криптосистема Эль-Гамаля}
 \tasksection
 
-\tasknumber Зашифровать сообщение по схеме Эль-Гамаля. Открытый ключ: $p = 29$; $g = 10$; $y = 8$. Секретный ключ: $x = 5$. Сообщение: $M = 4$. Использовать следующий случайный параметр для шифрования: $k = 5$.
+\tasknumber Зашифровать сообщение по схеме Эль-Гамаля. Открытый ключ: $p = 29$; $g = 10$; $y = 8$. Закрытый ключ: $x = 5$. Сообщение: $M = 4$. Использовать следующий случайный параметр для шифрования: $k = 5$.
 \medbreak
 \textbf{Ответ:} $c = (a; b) = (8; 21)$.
 \bigbreak
 
-\tasknumber Расшифровать сообщение по схеме Эль-Гамаля. Открытый ключ: $p = 23$; $g = 5$; $y = 9$. Секретный ключ: $x = 10$. Зашифрованное сообщение: $\left( 10, 18\right)$.
+\tasknumber Расшифровать сообщение по схеме Эль-Гамаля. Открытый ключ: $p = 23$; $g = 5$; $y = 9$. Закрытый ключ: $x = 10$. Зашифрованное сообщение: $\left( 10, 18\right)$.
 \medbreak
 \textbf{Ответ:} $m = 4$.
 \bigbreak
 
-\tasknumber Расшифровать сообщение по схеме Эль-Гамаля. Открытый ключ: $p = 29$; $g = 15$; $y = 28$. Секретный ключ: $x = 14$. Зашифрованное сообщение: $\left( 10, 23\right)$.
+\tasknumber Расшифровать сообщение по схеме Эль-Гамаля. Открытый ключ: $p = 29$; $g = 15$; $y = 28$. Закрытый ключ: $x = 14$. Зашифрованное сообщение: $\left( 10, 23\right)$.
 \medbreak
 \textbf{Ответ:} $m = 6$.
 \bigbreak
